RESOLVED FIXED25428
5 crashes in DumpRenderTree at com.apple.WebCore • -[AccessibilityObjectWrapper accessibilityAttributeValue:] + 830
https://bugs.webkit.org/show_bug.cgi?id=25428
Summary 5 crashes in DumpRenderTree at com.apple.WebCore • -[AccessibilityObjectWrapp...
chris fleizach
Reported 2009-04-27 12:23:25 PDT
When Nodes are changed, we have to mark the children dirty going up the parent chain. However, we cannot rely on there being accessibility objects at each level. Instead the render chain has to be consulted
Attachments
fix crashing behavior in test (3.46 KB, patch)
2009-04-27 12:26 PDT, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2009-04-27 12:26:03 PDT
Created attachment 29822 [details] fix crashing behavior in test
Beth Dakin
Comment 2 2009-04-27 12:35:07 PDT
Comment on attachment 29822 [details] fix crashing behavior in test r=me
chris fleizach
Comment 3 2009-04-27 12:44:51 PDT
Note You need to log in before you can comment on or make changes to this bug.