Bug 25428: 5 crashes in DumpRenderTree at com.apple.WebCore • -[AccessibilityObjectWrapper accessibilityAttributeValue:] + 830 https://bugs.webkit.org/show_bug.cgi?id=25428

Canonical link: https://commits.webkit.org/34950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42900 268f45cc-cd09-0410-ab3c-d52691b4dbfc